<resources>
    <string name="app_name">Code Search</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_search_result">Search</string>
    <string name="title_activity_result">Result</string>
    <string name="placeholder"></string>
    <string name="owner">Owner:</string>
    <string name="updated">Updated:</string>
    <string name="title_activity_web_view">WebView</string>
    <string name="title_activity_browser">Browser</string>
    <string name="created">Created:</string>
    <string name="message_body" formatted="false">Hey, I found an awesome repository on Code Search called %s. You should check it out at %s</string>
    <string name="search_hint">Search Github</string>
    <string name="x13504987_student_ncirl_ie">x13504987@student.ncirl.ie</string>
    <string name="nav_location">Location</string>
    <string name="nav_search">Search</string>
    <string name="nav_share">Share</string>
    <string name="share_message">Hey, I found a cool app called Code Search check it out!</string>
    <string name="search_complete">Search Complete</string>
    <string name="results_fetched">Results Retrieved</string>
    <string name="result_count">Results</string>
    <string name="search_error">Unable to get Results</string>
    <string name="search">Search</string>
    <string name="homepage">Homepage</string>
    <string name="na">NA</string>
    <string name="watchers">Watchers:</string>
    <string name="zero_default">0</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_error">Please enable location</string>
    <string name="language">Language:</string>
    <string name="repo_key_owner">Owner:</string>
    <string name="repo_key_created">Created:</string>
    <string name="repo_key_language">Language:</string>
    <string name="repo_key_updated">Updated:</string>
    <string name="repo_key_watchers">Watchers:</string>
    <string name="repo_key_open_issues">Open Issues:</string>
    <string name="repo_key_forks">Forks:</string>
    <string name="notification_title">Github Search Retrieval</string>
    <string name="notification_message">Fetching Results...</string>
    <string name="no_network_connection">No network connection</string>
    <string name="main_description">Code Search is an application that allows you to search GitHub
        for repositories and explore them in more depth without having to leave the application.
        Why not take a look around and search for some awesome repositories you may find useful</string>
</resources>
